# espup-slint

./: Cargo.toml  README.md  build.rs  espup.slint  gallery.slint  main.rs
src/: main.rs
ui/: gallery_settings.slint  side_bar.slint
ui/pages/: controls_page.slint  install_page.slint  list_view_page.slint  page.slint  pages.slint  text_edit_page.slint  uninstall_page.slint  update_page.slint
