[package]
name = "espup-slint"
version = "0.1.0"
authors = ["Sergio Gasquez Arcos <sergio.gasquez@gmail.com>"]
edition = "2021"
build = "build.rs"
license = "GPL-3.0-only OR LicenseRef-Slint-commercial"
publish = false

[[bin]]
path = "src/main.rs"
name = "espup-slint"

[dependencies]
slint = "0.3"
espup = { git = "https://github.com/esp-rs/espup.git", branch = "feature/lib" }
anyhow = "1.0.66"


[build-dependencies]
slint-build = "0.3"
